--- a/mihomo/mihomo-config.yaml
+++ b/mihomo/mihomo-config.yaml
@@ -146,6 +146,8 @@ tun:
     - "tcp://any:53"
   auto-route: true # 自动设置全局路由,可以自动将全局流量路由进入 tun 网卡
   auto-redirect: true # 自动配置 iptables 以重定向 TCP 连接。仅支持 Linux。带有 auto-redirect 的 auto-route 现在可以在路由器上按预期工作，无需干预。
+  loopback-address: # 自签SideStore/StosVPN效果
+    - 10.7.0.1
   auto-detect-interface: true # 自动选择流量出口接口,多出口网卡同时连接的设备建议手动指定出口网卡
   route-exclude-address-set: [cn_ip] # 裸核跑mihomo必须要开，配置防火墙麻烦。就指定以下规则绕过内核
 
